--- a/views/registerpark.hbs
+++ b/views/registerpark.hbs
@@ -30,12 +30,16 @@
     </div>
     <div class="form-group">
         <label>Price Of Ordering Car Parking Slot </label>
-        <input  class="form-control"  id="price" name="price" type="text" placeholder="Odering available Enter the Price" >
+        <input  class="form-control"  id="price" name="price" type="text" placeholder="Ordering available Enter the Price" >
     </div>
     <div class="form-group">
         <label>Image</label>
         <input  class="form-control"  id="image" name="image" type="test" placeholder="Place your CarPark Image URL here"  >
     </div>
+    <div class="form-group">
+            <label>Capacity of your car park </label>
+            <input  class="form-control"  id="capacity" name="capacity" type="text" placeholder="Enter the number of vehicle can park" >
+        </div>
     <div class="form-group col-lg-12">
             <div class="col-lg-4">
                 <label> Open Time </label>
