--- a/views/partials/userHeader.hbs
+++ b/views/partials/userHeader.hbs
@@ -16,6 +16,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#">Reservations</a></li>
+                <li><a href="/users/customer">Home</a></li>
                 <li><a href="/users/useredit">Edit</a></li>
                 <li><a href="/users/direction">Direction</a></li>
                 <li><a href="/users/logout">Logout</a></li>
