--- a/views/partials/carparkheader.hbs
+++ b/views/partials/carparkheader.hbs
@@ -15,7 +15,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/users/carparkedit">Logout</a></li>
+                <li><a href="/users/carpark">Home</a></li>
+                <li><a href="/users/carparkedit">Edit</a></li>
                 <li><a href="/users/logout">Logout</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
