--- a/views/customer.hbs
+++ b/views/customer.hbs
@@ -1,7 +1,30 @@
 {{>userHeader}}
-<p>{{title}}</p>
 
-<div class="container">
+<div class="col-xs-12 col-sm-6 col-md-6">
+    <div class="well well-lg">
+        <div class="row">
+            <div class="col-sm-6 col-md-4">
+                <img src="{{customer.image}}" alt="" class="img-rounded img-responsive">
+            </div>
+            <div class="col-sm-6 col-md-8">
+                <h2>
+                    {{customer.userName}}
+                </h2>
+                <h3><cite>{{customer.address}} <i class="glyphicon glyphicon-map-marker">
+                </i></cite></h3>
+                <p>
+
+                <h4><i class="glyphicon glyphicon-envelope"></i>{{customer.email}}</h4>
+
+                <h4><i class="glyphicon glyphicon-phone"></i> {{customer.number}}</h4>
+
+
+            </div>
+        </div>
+    </div>
+</div>
+<div class="col-lg-12">
+    <div class="container">
         {{# each reservations}}
             <div class="row">
                 {{# each this}}
@@ -10,14 +33,17 @@
                             <div class="caption">
                                 <h3>{{this.parkEmail}}</h3>
                                 <p class="discription">
-                                    <div>
+                                <div>
                                     Accept : {{this.accept}}
-                                    </div>
-                                    <div>
-                                        Email : {{this.parkEmail}}
-                                    </div>
+                                </div>
+                                <div>
+                                    Email : {{this.parkEmail}}
+                                </div>
                                 </p>
-                                <a href="#" class="btn btn-primary pull-left" role="button">Location</a>
+                                <div class="clearfix">
+                                    <a href="/users/view" class="btn btn-primary pull-left" role="button">View</a>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -25,3 +51,4 @@
             </div>
         {{/each}}
     </div>
+</div>
