--- a/views/register.hbs
+++ b/views/register.hbs
@@ -20,6 +20,10 @@
         <input  class="form-control" name="address" type="text" placeholder="Enter your address" required>
     </div>
     <div class="form-group">
+        <label>Image</label>
+        <input  class="form-control"  id="image" name="image" type="url" placeholder="Place your CarPark Image URL here"  required >
+    </div>
+    <div class="form-group">
         <label>NIC Number  </label>
         <input  class="form-control"  id="nic" name="nic" type="text" placeholder="Enter your NIC" onchange="validateNIC()" required>
     </div>
