Develop pie chart

--- a/views/customer.hbs
+++ b/views/customer.hbs
@@ -41,7 +41,7 @@
                                 </div>
                                 </p>
                                 <div class="clearfix">
-                                    <a href="/users/view" class="btn btn-primary pull-left" role="button">View</a>
+                                    <a href="/users/view?email={{this.parkEmail}}" class="btn btn-primary pull-left" role="button">View</a>
                                 </div>
 
                             </div>
