--- a/views/user.hbs
+++ b/views/user.hbs
@@ -72,7 +72,7 @@
                                     </div>
                                 </p>
                                 <div class="clearfix">
-                                    <a href="/users/view" class="btn btn-primary pull-left" role="button">View</a>
+                                    <a href="/users/view?email={{this.email}}" class="btn btn-primary pull-left" role="button">View</a>
                                     <a href="/users/order?reserve={{this.email}}" class="btn btn-success pull-right" role="button">Reservation</a>
                                 </div>
 
