--- a/views/view.hbs
+++ b/views/view.hbs
@@ -24,6 +24,10 @@
 
       function drawChart() {
 
+          var f= {{falseR}};
+          var t = {{trueR}};
+          var all = {{all}};
+          var car = {{park.capacity}};
         var data = google.visualization.arrayToDataTable([
           ['Task', 'Hours per Day'],
           ['Work',     11],
