--- a/views/carpark.hbs
+++ b/views/carpark.hbs
@@ -7,9 +7,9 @@
                 <img src="{{park.image}}" alt="" class="img-rounded img-responsive">
             </div>
             <div class="col-sm-6 col-md-8">
-                <h4>
+                <h2>
                     {{park.userName}}
-                </h4>
+                </h2>
                 <small><cite title="San Francisco, USA">{{park.address}} <i class="glyphicon glyphicon-map-marker">
                 </i></cite></small>
                 <p>
@@ -42,7 +42,7 @@
 </div>
 <div class="container">
 
-<table style="width:100%; font-family: 'Century Gothic'; margin-top: 20%">
+<table style="width:100%; font-family: 'Century Gothic'; font-size: x-large; color: #080808; margin-top: 20%">
   <tr>
     <th>Email</th>
     <th>Month</th>
@@ -69,8 +69,10 @@
                   {{/each}}
 
           {{/each}}
+
 </table>
 </div>
+<div style="color: #a94442;font-family: 'Century Gothic';font-size: x-large;text-align: center">Reservations Details</div>
 <script>
     function deleteRow() {
 
