--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <style>
+          body  {
+              background-image: url("https://static.pexels.com/photos/24353/pexels-photo.jpg");
+              background-color: #cccccc;
+          }
+      </style>
     <title>{{title}}</title>
 
       <link rel='stylesheet' href='/stylesheets/style.css' />
       <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
   </head>
-  <body>
+
+  <body >
     {{{body}}}
      <script src="/javascripts/bootstrap.js"></script>
   </body>
