--- a/views/partials/carparkheader.hbs
+++ b/views/partials/carparkheader.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container-fluid" style="font-family: 'Roboto', 'sans-serif';font-size: x-large">
 
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
