--- a/views/carparkedit.hbs
+++ b/views/carparkedit.hbs
@@ -1,6 +1,6 @@
 {{>carparkheader}}
 
-<form  method="post" action="/users/carparkedit" >
+<form  method="post" action="/users/carparkedit" style="font-family: 'Century Gothic';font-size: x-large" >
     <div class="form-group">
         <label> Name </label>
         <input class="form-control" name="name" type="text" placeholder="Enter your Name">
@@ -14,7 +14,7 @@
         <input  class="form-control"  id="price" name="price" onchange="valid()" type="text" placeholder="Odering available Enter the Price" >
     </div>
 
-    <input class="form-control" name="submit" type="submit" value="register">
+    <input class="form-control" name="submit" type="submit" style="font-family: 'Century Gothic';color: #080808;font-size: large;font-weight: bold;background-color: #1b6d85" value="Edit">
 
 </form>
 
