--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -3,8 +3,8 @@
   <head>
       <style>
           body  {
-              background-image: url("https://static.pexels.com/photos/24353/pexels-photo.jpg");
-              background-color: #cccccc;
+              background-image: url("https://www.colourbox.com/preview/1710138-blue-blur-abstract-refractive-fluid-particle-motion.jpg");
+              background-color: rgba(248, 247, 216, 0.7);
           }
       </style>
     <title>{{title}}</title>
