--- a/views/carpark.hbs
+++ b/views/carpark.hbs
@@ -10,8 +10,8 @@
                 <h2>
                     {{park.userName}}
                 </h2>
-                <small><cite title="San Francisco, USA">{{park.address}} <i class="glyphicon glyphicon-map-marker">
-                </i></cite></small>
+                <small><h4>{{park.address}} <i class="glyphicon glyphicon-map-marker">
+                </i></h4></small>
                 <p>
 
                     <i class="glyphicon glyphicon-envelope"></i> {{park.email}}
@@ -25,7 +25,7 @@
 </div>
 <div class="col-xs-12 col-sm-6 col-md-6" style="font-family: 'Century Gothic'">
     <div class= "col-lg-12 ">
-        <p style=" font-family: 'Century Gothic';font-size: x-large;color:blue">Count the Number of Vehical in and Out</p>
+        <p style=" font-family: 'Century Gothic';font-size: x-large;color:#080808">Count the Number of Vehical in and Out</p>
     </div>
     <div class= "col-lg-12 ">
         <p style=" font-family: 'Century Gothic';font-size: x-large">Capacity left : {{reserved}}</p>
@@ -62,7 +62,7 @@
                       <td>{{this.date}}</td>
                       <td>{{this.startTime}}</td>
                       <td>{{this.endTime}}</td>
-                      <td><a href="/users/accept?userEmail={{this.userEmail}}" class="btn btn-primary pull-left" style="width: 30%;height: 20%" role="button">Accept</a></td>
+                      <td><a href="/users/accept?userEmail={{this.userEmail}}" class="btn btn-success pull-left" style="width: 50%;height: 20%" role="button">Accept</a></td>
                       </tr>
 
 
