--- a/views/customer.hbs
+++ b/views/customer.hbs
@@ -23,14 +23,14 @@
         </div>
     </div>
 </div>
-<div class="col-lg-12">
-    <div class="container">
+<div class="col-lg-12" >
+    <div class="container" >
         {{# each reservations}}
             <div class="row">
                 {{# each this}}
                     <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <div class="caption">
+                        <div class="thumbnail" >
+                            <div class="caption" style="color: #080808;font-family: 'Century Gothic'">
                                 <h3>{{this.parkEmail}}</h3>
                                 <p class="discription">
                                 <div>
