--- a/views/customer.hbs
+++ b/views/customer.hbs
@@ -33,11 +33,23 @@
                             <div class="caption" style="color: #080808;font-family: 'Century Gothic'">
                                 <h3>{{this.parkEmail}}</h3>
                                 <p class="discription">
-                                <div>
+                                <div class="col-lg-6">
                                     Accept : {{this.accept}}
                                 </div>
-                                <div>
-                                    Email : {{this.parkEmail}}
+                                <div class="col-lg-6">
+                                    Amount : {{this.amount}}
+                                </div>
+                                <div class="col-lg-6">
+                                    Month : {{this.month}}
+                                </div>
+                                <div class="col-lg-6">
+                                    Date : {{this.date}}
+                                </div>
+                                <div class="col-lg-6">
+                                    Time Start : {{this.startTime}}
+                                </div>
+                                <div class="col-lg-6">
+                                    Time End : {{this.endTime}}
                                 </div>
                                 </p>
                                 <div class="clearfix">
